--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
                     </div>
                 </div>
             </div>
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="3a347155-e1e7-47dc-bfc7-eb4d493a248f";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
             <div class="swiper-slide box">
                 <img src="pic-2.png" alt="">
