--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
-
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="c835aa43-121f-4f26-a294-fe5eb259d873";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </head>
 <body>
     
