--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="//code.tidio.co/8lxsiyeg3b6w2mg0ygy1jsliiooididx.js" async></script>
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="b2e5e6f1-8f3d-48fb-ab9b-8f0918d1b231";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
